@@ -124,6 +124,11 @@ public:
      */
     static QRect ajustToRotatedImg(const QRect& region, const QSize& fullSize, int rotation);
 
+    /** When images is flipped, rectangles are off-position, ajust them using
+     *  image's current size and flip(horizon,vertical supported only)
+     */
+    static QRect ajustToFlippedImg(const QRect& region, const QSize& fullSize, int flip);
+
 protected:
 
     QVariant m_value;
